# pyrusult

./: README.md  pyproject.toml  ruff.toml  tidy.sh
.helix/: languages.toml
src/pyrusult/: __init__.py
test/: test.py
