[project]
name = "pyrusult"
version = "0.1.0"
description = "Rust's std::result<T, E> ported to python"
readme = "README.md"
authors = [
    { name = "thng292", email = "nguyenquangthong292@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "ruff>=0.15.1",
]
